--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <meta charset="UTF-8">
 <title>Pixel Drawing</title>
 <script type="text/javascript" src="drawstuff.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.1.2/math.js"></script>
 </head>
 <body onload="main();">
 <canvas id="viewport" width="512" height="512"></canvas>
+<br>
+<canvas id="blinnPhong" width="512" height="512"></canvas>
 </body>
 </html>
